Fix uneven 2nd columns
Thanks to @madrick for figuring this out

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -55,3 +55,13 @@ html {
     margin-top: 3px !important;
     margin-bottom: 3px !important;
 }
+
+.d-overflowH
+{
+    overflow: hidden !important;
+}
+
+.d-flex1
+{
+    flex: 1 !important;
+}
